# CS585-project

./:  .travis.yml  .travis.yml  CMakeLists.txt  README.md  game.m.cpp
docs/: CodingStandard.md
src/: game.m.cpp
src/test/: test0.cpp
